--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,10 @@ p {
         line-height: 3rem;
         font-weight: bolder;  
     }
+    p {
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(114, 113, 113);
+    font-size: 1rem;
     .Download-button {
         margin: 20% 06% 3% 0;
     }
