--- a/css/styles.css
+++ b/css/styles.css
@@ -151,17 +151,31 @@ p {
         transform: rotate(0);
         position: static;
     }
-        .navbar-link {
-        position: relative;
-        right: 5%;
-        text-align: left;
-    }
     .navbar-brand {
         font-family: 'Ubuntu', sans-serif;
         font-size: 3rem;
     }
+    p {
+        font-family: 'Open Sans', sans-serif;
+        color: rgb(114, 113, 113);
+        font-size: 2rem;
+    }
+    h3 {
+        font-size: 3rem;
+    }
     .Download-button {
         margin: 5% 3% 3% 0;
+    }
+    .nav-link {
+        font-size:2rem;
+        font-family: 'Ubuntu', sans-serif;
+        text-align: left;
+        margin-left: 35px;
+    }
+    .navbar-link {
+        position: relative;
+        right: 5%;
+        text-align: left;
     }
     h1 {
 
@@ -169,10 +183,6 @@ p {
         line-height: 3rem;
         font-weight: bolder;  
     }
-    p {
-    font-family: 'Open Sans', sans-serif;
-    color: rgb(114, 113, 113);
-    font-size: 2rem;
     .Download-button {
         margin: 20% 06% 3% 0;
     }
